RosCore example added as comment.